--- a/style.css
+++ b/style.css
@@ -10,13 +10,41 @@ header{
   width: 500px;
 }
 .mid-part{
+  border: 20 red;
   background-image: url('/Vectorrr.png');
   background-repeat: no-repeat;
   background-size: 100%;
   display: flex;
   justify-content: space-between;
+  padding :40px 40px ;
+  margin-top: 100px;
 }
 .image2{
-  width: 30px;
-  height: 25px;
+  width: 180px;
+  height:250px;
+}
+.btn{
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+.btn2{
+  text-align: center;
+  padding: 30px;
+  margin-top:100px;
+  border-radius: 20px;
+}
+.text2{
+  font-size: 38px;
+  font-weight: 500;
+  
+}
+
+#btn{
+  font-size: 30px;
+  font-weight: 400;
+  color: white;
+  padding: 20px;
+  background-color: orangered;
+  border-radius:10px;
 }
