--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ header{
   border-color: black;
 }
 .img4{
-    background-image: url('/Rectangle 2.png')
+  border: 15px solid red;
+  border-radius: 50%;
+  padding: 30px;
+}
 
+.offer{
+  margin-top: 90px;
 }
